--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
-    <h1>hello.</h1>
+    <div class="title">
+        <h2 id="title">Cryptostock</h2>
+        <h3 id="subtitle">because you totally needed to know how much a share of Apple cost in Bitcoin.</h3>
+    </div>
+    <div class="infopanel">
+        <div></div>
+    </div>
+    <div class="ticker">
+        <button class="stonks">This is a name and price.</button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
