Fixed the API Calls, need working search bar that can convert company name to ticker

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <h1>CryptoStock</h1>
             <h5>Revolutionizing the way that a function makes a conversion</h5>
             <form class="searchBtn">
-                <label for="search">Search for a Company:</label>
-                <input type="text" placeholder="Enter ticker symbol..." name="search2" style="color:aliceblue" id="search">
-                <a class="waves-effect waves-light btn-small #00e676 green accent-3">Search</a>
+                <label for="search"><h6>Search for a Company</h6>:</label>
+                <input type="text" placeholder="Search....." name="search2" style="color:aliceblue" id="search">
+                <a class="waves-effect waves-light btn-small #00e676 green accent-3" id="searchBtn">Search</a>
             </form>
         </div>
     </div>
