--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <form class="searchBtn">
                 <label for="search">Search for a Company:</label>
                 <input type="text" placeholder="Enter ticker symbol..." name="search2" style="color:aliceblue" id="search">
-                <a class="waves-effect waves-light btn-small #00e676 green accent-3">Search</a>
+                <a id="searchbtn" class="waves-effect waves-light btn-small #00e676 green accent-3">Search</a>
             </form>
         </div>
     </div>
