--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h5>Revolutionizing the way that a function makes a conversion</h5>
             <form class="searchBtn">
                 <label for="search"><h6>Search for a Company</h6>:</label>
-                <input type="text" placeholder="Search....." name="search2" style="color:aliceblue" id="search">
+                <input type="text" placeholder="Search....." name="search2" style="background: #009688; color:aliceblue" id="search">
                 <a class="waves-effect waves-light btn-small #00e676 green accent-3" id="searchBtn">Search</a>
             </form>
         </div>
