--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="header row #009688 teal">
         <div class="col s12" style = "text-align: center; color:aliceblue">
             <h1>CryptoStock</h1>
-            <h5>Revolutionizing the way that a function makes a conversion</h5>
+            <h5>Investing With Cryptocurrency, Simplified</h5>
             <form class="searchBtn">
                 <label for="search"><h6>Search for a Company</h6>:</label>
                 <input type="text" placeholder="Search....." name="search2" style="background: #009688; color:aliceblue" id="search">
