reverted to working app

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
             <h1>CryptoStock</h1>
             <h5>Investing With Cryptocurrency, Simplified</h5>
             <form class="searchBtn">
-                <label for="search"><h6>Search for a Company</h6>:</label>
-                <input type="text" placeholder="Search....." name="search2" style="background: #009688; color:aliceblue" id="search">
+                <input type="text" placeholder="Search for a Company....." name="search2" style="background: #009688; color:aliceblue" id="search">
                 <a class="waves-effect waves-light btn-small #00e676 green accent-3" id="searchBtn">Search</a>
             </form>
         </div>
@@ -40,13 +39,41 @@
                     </thead>
                 
                     <tbody>
-                       <tr>
-                        <td id="company">Amazon</td>
-                        <td id="code">AMZN</td>
-                        <td id="AmazonDollarVal">$</td>
-                        <td id="AmazonVolume">$</td>
-                        <td id="AmazonCryptoVal">₿</td>
-                        </tr>
+                        <tr>
+                            <td id="company">Apple</td>
+                            <td id="code">AAPL</td>
+                            <td id="AppleDollarVal">$</td>
+                            <td id="AppleVolume">$</td>
+                            <td id="AppleCryptoVal">₿</td>
+                            </tr>
+                            <tr>
+                            <td id="company">Microsoft</td>
+                            <td id="code">MSFT</td>
+                            <td id="MicrosoftDollarVal">$</td>
+                            <td id="MicrosoftVolume">$</td>
+                            <td id="MicrosoftCryptoVal">₿</td>
+                            </tr>
+                            <tr>
+                            <td id="company">Amazon</td>
+                            <td id="code">AMZN</td>
+                            <td id="AmazonDollarVal">$</td>
+                            <td id="AmazonVolume">$</td>
+                            <td id="AmazonCryptoVal">₿</td>
+                            </tr>
+                            <tr>
+                            <td id="company">Alphabet (Google)</td>
+                            <td id="code">GOOGL</td>
+                            <td id="GoogleDollarVal">$</td>
+                            <td id="GoogleVolume">$</td>
+                            <td id="GoogleCryptoVal">₿</td>
+                            </tr>
+                            <tr>
+                            <td id="company">Facebook</td>
+                            <td id="code">FB</td>
+                            <td id="FacebookDollarVal">$</td>
+                            <td id="FacebookVolume">$</td>
+                            <td id="FacebookCryptoVal">₿</td>
+                            </tr>    
                     </tbody>
                 </table>        
             </div>
